# tiburoncin

./: README.md  ask.py  cambios.py  consultas.py  excel.py  graphics.py  main.py  pyproject.toml  recuerdoestresante.py  requirements.txt  res_op_1_1.txt  res_op_1_2.txt  resultads.xlsx
